--- a/sdk/examples/create-test.mdx
+++ b/sdk/examples/create-test.mdx
@@ -29,7 +29,7 @@ In some ocasions we will need to create our own tests to control more what we ar
 1. **Initialize the SDK**: Replace `"YOUR_API_KEY"` with your actual API key.
 3. **Create Test**: Use the `galtea.tests.create` method to upload the test file and create the test on the platform.
 
-## Already Created test file
+## Creating a test from scratch
 
 ### Example Code
 
