--- a/sdk/api/evaluation-task-service.mdx
+++ b/sdk/api/evaluation-task-service.mdx
@@ -19,21 +19,25 @@ This method allows you to create an evaluation task.
 
 ### Parameters
 
-- `evaluation_id`
-  - The ID of the evaluation you want to create a task for.
-  - REQUIRED: yes
-- `metric_type`
-  - The type of metric to use for the evaluation.
-  - REQUIRED: yes
-- `input`
-  - The input data for the evaluation task.
-  - REQUIRED: yes
-- `actual_output`
-  - The actual output produced by the product.
-  - REQUIRED: yes
-- `expected_output`
-  - The expected output for the evaluation task.
-  - REQUIRED: no
+<ResponseField name="evaluation_id" type="string" required>
+  The ID of the evaluation you want to create a task for.
+</ResponseField>
+
+<ResponseField name="metric_type" type="string" required>
+  The type of metric to use for the evaluation.
+</ResponseField>
+
+<ResponseField name="input" type="string" required>
+  The input data for the evaluation task.
+</ResponseField>
+
+<ResponseField name="actual_output" type="string" required>
+  The actual output produced by the product.
+</ResponseField>
+
+<ResponseField name="expected_output" type="string">
+  The expected output for the evaluation task.
+</ResponseField>
 
 ### Example Code
 
@@ -54,9 +58,9 @@ This method allows you to list all evaluation tasks associated with a specific e
 
 ### Parameters
 
-- `evaluation_id`
-  - The ID of the evaluation for which you want to list tasks.
-  - REQUIRED: yes
+<ResponseField name="evaluation_id" type="string" required>
+  The ID of the evaluation for which you want to list tasks.
+</ResponseField>
 
 ### Example Code
 
@@ -72,9 +76,9 @@ This method allows you to retrieve a specific evaluation task by its ID.
 
 ### Parameters
 
-- `task_id`
-  - The ID of the task you want to retrieve.
-  - REQUIRED: yes
+<ResponseField name="task_id" type="string" required>
+  The ID of the task you want to retrieve.
+</ResponseField>
 
 ### Example Code
 
@@ -89,12 +93,13 @@ This method allows you to update a specific evaluation task by its ID.
 
 ### Parameters
 
-- `task_id`
-  - The ID of the task you want to update.
-  - REQUIRED: yes
-- `actual_output`
-  - The new actual output for the task.
-  - REQUIRED: no
+<ResponseField name="task_id" type="string" required>
+  The ID of the task you want to update.
+</ResponseField>
+
+<ResponseField name="actual_output" type="string">
+  The new actual output for the task.
+</ResponseField>
 
 ### Example Code
 
@@ -112,9 +117,9 @@ This method allows you to delete a specific evaluation task by its ID.
 
 ### Parameters
 
-- `task_id`
-  - The ID of the task you want to delete.
-  - REQUIRED: yes
+<ResponseField name="task_id" type="string" required>
+  The ID of the task you want to delete.
+</ResponseField>
 
 ### Example Code
 
