--- a/sdk/api/test-service.mdx
+++ b/sdk/api/test-service.mdx
@@ -19,22 +19,27 @@ This method allows you to create a test for your product.
 
 ### Parameters
 
-- `name`
-  - The name of the test.
-  - REQUIRED: yes
-- `type`
-  - The type of test (e.g., QUALITY, RED_TEAMING).
-  - REQUIRED: yes
-- `product_id`
-  - The ID of the product you want to evaluate.
-- `ground_truth_file_path`
-  - The path to the knowledge file (pdf format) in which We will find the information the source of truth for the model answers.
-  - We have to wait for the platform to generate a syntehtic dataset based on the ground_truth provided, so we need to wait for the test to be ready before we can use it.
-  - REQUIRED: NO
-- `test_file_path`
-  - The path to the custom test file.
-  - This file should contain the test cases you want to evaluate.
-  - REQUIRED: NO
+<ResponseField name="name" type="string" required>
+  The name of the test.
+</ResponseField>
+
+<ResponseField name="type" type="string" required>
+  The type of test (e.g., QUALITY, RED_TEAMING).
+</ResponseField>
+
+<ResponseField name="product_id" type="string" required>
+  The ID of the product you want to evaluate.
+</ResponseField>
+
+<ResponseField name="ground_truth_file_path" type="string">
+  The path to the knowledge file (pdf format) in which We will find the information the source of truth for the model answers.
+  We have to wait for the platform to generate a synthetic dataset based on the ground_truth provided, so we need to wait for the test to be ready before we can use it.
+</ResponseField>
+
+<ResponseField name="test_file_path" type="string">
+  The path to the custom test file.
+  This file should contain the test cases you want to evaluate.
+</ResponseField>
 
 ### Example Code
 
@@ -56,9 +61,9 @@ This method allows you to list all tests associated with a specific product.
 
 ### Parameters
 
-- `product_id`
-  - The ID of the product for which you want to list tests.
-  - REQUIRED: yes
+<ResponseField name="product_id" type="string" required>
+  The ID of the product for which you want to list tests.
+</ResponseField>
 
 ### Example Code
 
@@ -74,9 +79,9 @@ This method allows you to retrieve a specific test by its ID.
 
 ### Parameters
 
-- `test_id`
-  - The ID of the test you want to retrieve.
-  - REQUIRED: yes
+<ResponseField name="test_id" type="string" required>
+  The ID of the test you want to retrieve.
+</ResponseField>
 
 ### Example Code
 
@@ -91,9 +96,9 @@ This method allows you to delete a specific test by its ID.
 
 ### Parameters
 
-- `test_id`
-  - The ID of the test you want to delete.
-  - REQUIRED: yes
+<ResponseField name="test_id" type="string" required>
+  The ID of the test you want to delete.
+</ResponseField>
 
 ### Example Code
 
