--- a/sdk/api/evaluation-task-service.mdx
+++ b/sdk/api/evaluation-task-service.mdx
@@ -7,11 +7,9 @@ icon: "objects-column"
 The Evaluation Task Service in the Galtea SDK allows you to manage evaluation tasks for assessing your products.
 This Service is exposed by the `galtea.evaluation_tasks` object and we will further explore its API down below.
 
-Remember that we will be using the `galtea` object, which is an instance of the `Galtea` class.
-```python
-from galtea import Galtea
-galtea = Galtea(api_key="<YOUR_GALTEA_PLATFORM_API_KEY>")
-```
+<Info>
+  Remember that we will be using the `galtea` object. More information [here](/sdk/api/galtea).
+</Info>
 
 ## Create Evaluation Task
 
