--- a/sdk/api/test-service.mdx
+++ b/sdk/api/test-service.mdx
@@ -7,11 +7,9 @@ icon: "objects-column"
 The Test Service in the Galtea SDK allows you to manage tests for evaluating your products.
 This Service is exposed by the `galtea.tests` object and we will further explore its API down below.
 
-Remember that we will be using the `galtea` object, which is an instance of the `Galtea` class.
-```python
-from galtea import Galtea
-galtea = new Galtea(api_key="<YOUR_GALTEA_PLATFORM_API_KEY>")
-```
+<Info>
+  Remember that we will be using the `galtea` object. More information [here](/sdk/api/galtea).
+</Info>
 
 ## Create Test
 
