--- a/sdk/api/metrics-service.mdx
+++ b/sdk/api/metrics-service.mdx
@@ -4,7 +4,7 @@ description: "Exploring the Metrics Service API in the Galtea SDK"
 icon: "objects-column"
 ---
 
-The Metrics Service in the Galtea SDK allows you to manage metrics for evaluating your products.
+The Metrics Service in the Galtea SDK allows you to manage [metrics](/concepts/metric-type) for evaluating your products.
 This Service is exposed by the `galtea.metrics` object and we will further explore its API down below.
 
 <Info>
