--- a/sdk/api/version-service.mdx
+++ b/sdk/api/version-service.mdx
@@ -4,7 +4,7 @@ description: "Exploring the Version Service API in the Galtea SDK"
 icon: "objects-column"
 ---
 
-The Version Service in the Galtea SDK allows you to manage different iterations of your products.
+The Version Service in the Galtea SDK allows you to manage different iterations of your [products](/concepts/product).
 This Service is exposed by the `galtea.versions` object and we will further explore its API down below.
 
 <Info>
